# learn_c

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: color.h.8B211B1A53FB4C5D.idx  color.h.8F397FFDB00CDCF1.idx  color.h.AB40CD006EE19DC2.idx  color.h.C077972F0C9EC1C2.idx  color.h.E7A6CF7D22F5A555.idx  main.c.0068A322160BBC6E.idx  main.c.024B8A78FA532E3C.idx  main.c.02E1945F9F8BF357.idx  main.c.03BA0B19C2737601.idx  main.c.0864E7DFADA891DC.idx  main.c.08C477400146D418.idx  main.c.0A250057F1CA212D.idx  main.c.0A7CDD218176144F.idx  main.c.1213B338521552D1.idx  main.c.16D233E652321B46.idx  main.c.1845FCD2522E108E.idx  main.c.19C5ED1FBD87A5B1.idx  main.c.1A0DBB0408F9973D.idx  main.c.2671F8ED0E3F7CFD.idx  main.c.2881309D4D306142.idx  main.c.3041B34CAF1651E8.idx  main.c.349490754A8FDCC8.idx  main.c.3E92AA1A7FCBDD78.idx  main.c.3FBA1B6A80D710E0.idx  main.c.424EF0F8B4E14052.idx  main.c.4400254F7748CD7C.idx  main.c.459CE7FA94ABC524.idx  main.c.4B71CA8B3C45303E.idx  main.c.50ABF5EE7D1E25BE.idx  main.c.51AFA23B737E0936.idx  main.c.5314A7C547C593B1.idx  main.c.5BFD49A53069E892.idx  main.c.5CC20B1E080A11A1.idx  main.c.5CFA82F4688881F3.idx  main.c.66E68BC18A81D126.idx  main.c.68A0518720780F58.idx  main.c.6C5718AA37561814.idx  main.c.769F83729EF0743C.idx  main.c.8159B29718A23F79.idx  main.c.88ACCA57CBD330B6.idx  (+24 more)
DSA/array_manipulation/src/: main.c
DSA/binary_search/: CMakeLists.txt
DSA/binary_search/src/: main.c
DSA/binary_tree/: CMakeLists.txt
DSA/bubble_sort/: CMakeLists.txt
DSA/bubble_sort/src/: color.h  main.c  sleep.h
DSA/circular_left_shifting/: CMakeLists.txt
DSA/circular_left_shifting/src/: main.c
DSA/fibonacci/: CMakeLists.txt
DSA/fibonacci/src/: main.c
DSA/harold_pascals/: CMakeLists.txt
DSA/harold_pascals/src/: main  main.c
DSA/harold_pascals/src/main.dSYM/Contents/Resources/DWARF/: main
DSA/insertion_sort/: CMakeLists.txt
DSA/insertion_sort/src/: main.c
DSA/linked_lists/: CMakeLists.txt
DSA/linked_lists/src/: main.c
DSA/merge_sort/: CMakeLists.txt
DSA/merge_sort/src/: color.h  main.c
DSA/pascals/: CMakeLists.txt
DSA/pascals/src/: main  main.c
DSA/pascals/src/main.dSYM/Contents/Resources/DWARF/: main
DSA/selection_sort/: CMakeLists.txt
DSA/selection_sort/src/: main.c
DSA/spiral/: CMakeLists.txt
DSA/structures/: CMakeLists.txt
binary_search/src/: main.c
donut/: CMakeLists.txt
donut/src/: main.c
examples/array_manipulation/: CMakeLists.txt
examples/bali_triangle/: CMakeLists.txt
examples/bali_triangle/src/: main  main.c
examples/bali_triangle/src/main.dSYM/Contents/Resources/DWARF/: main
examples/bill_problem/: CMakeLists.txt
examples/bill_problem/src/: main.c
examples/butterfly/: CMakeLists.txt
examples/butterfly/src/: main  main.c
examples/butterfly/src/main.dSYM/Contents/Resources/DWARF/: main
examples/characterism/: CMakeLists.txt
examples/characterism/src/: main  main.c
examples/characterism/src/main.dSYM/Contents/Resources/DWARF/: main
examples/create_file/: CMakeLists.txt
examples/create_file/src/: main.c
examples/diamond/: CMakeLists.txt
examples/diamond/src/: main  main.c
examples/diamond/src/main.dSYM/Contents/Resources/DWARF/: main
examples/dynamic_allocation/: CMakeLists.txt
examples/dynamic_allocation/src/: main.c
examples/elardo_calc/: CMakeLists.txt
examples/elardo_calc/src/: main.c
examples/hello_world/src/: main.c
examples/hour_glass/: CMakeLists.txt
examples/hour_glass/src/: main  main.c
examples/hour_glass/src/main.dSYM/Contents/Resources/DWARF/: main
examples/largest_submatrix/: CMakeLists.txt
examples/largest_submatrix/src/: main.c
examples/leap_year/: CMakeLists.txt
examples/leap_year/src/: main  main.c
examples/leap_year/src/main.dSYM/Contents/Resources/DWARF/: main
examples/palindrome/: CMakeLists.txt
examples/palindrome/src/: main.c
examples/palpak/: CMakeLists.txt
examples/palpak/src/: main.c
examples/pascals/: CMakeLists.txt
examples/pascals/src/: main.c
examples/pointer_access/: CMakeLists.txt
examples/pointer_access/src/: main.c
examples/prime/: CMakeLists.txt
examples/prime/src/: main.c
examples/rectangle_area/: CMakeLists.txt
examples/rectangle_area/src/: main.c
examples/remove_duplicates/: CMakeLists.txt
examples/remove_duplicates/src/: main.c
examples/saddle_point/: CMakeLists.txt
examples/saddle_point/src/: main.c
examples/sample/: CMakeLists.txt
examples/sample/src/: main.c  samp.h
examples/session_08_21/: CMakeLists.txt
examples/session_08_21/src/: header.h
examples/sort_absolute_difference/: CMakeLists.txt
examples/sort_absolute_difference/src/: main.c
examples/spiral/: CMakeLists.txt
examples/spiral/src/: main.c
examples/std_dev/: CMakeLists.txt
examples/std_dev/src/: main.c
examples/strings/: CMakeLists.txt
examples/strings/src/: main.c
examples/strscpn/: CMakeLists.txt
examples/strscpn/src/: main.c
examples/structs_enums/: CMakeLists.txt
examples/structs_enums/src/: main.c
games/donut/: CMakeLists.txt
games/donut/src/: main.c
games/matrices/: CMakeLists.txt
games/matrices/src/: main.c
games/rat_maze/: CMakeLists.txt
games/rat_maze/src/: color.h  main.c
games/valid_sudoku/: CMakeLists.txt
hello_world/: CMakeLists.txt
hello_world/src/: main.c
session_08_21/: CMakeLists.txt  flowcharting.md
session_08_21/src/: main.c
structures/src/: main.c
template/raylib_proj/: CMakeLists.txt
template/raylib_proj/src/: main.c
template/simple_proj/: CMakeLists.txt
template/simple_proj/src/: main.c
valid_sudoku/src/: _main.c  main.c
