cmake_minimum_required(VERSION 3.14)
project(learn_c
    DESCRIPTION "learnng the c fundamentals"
)

set(CMAKE_C_STANDARD 99)

add_subdirectory(DSA/binary_search)
add_subdirectory(DSA/circular_left_shifting)
add_subdirectory(DSA/fibonacci)
add_subdirectory(DSA/spiral)
add_subdirectory(DSA/linked_lists)
add_subdirectory(DSA/pascals)
add_subdirectory(DSA/harold_pascals)
add_subdirectory(DSA/array_manipulation)

add_subdirectory(games/valid_sudoku)
add_subdirectory(games/donut)
add_subdirectory(games/matrices)
add_subdirectory(games/rat_maze)

add_subdirectory(examples/hello_world)
add_subdirectory(examples/diamond)
add_subdirectory(examples/butterfly)
add_subdirectory(examples/bali_triangle)
add_subdirectory(examples/strings)
add_subdirectory(examples/characterism)
add_subdirectory(examples/session_08_21)
add_subdirectory(examples/palpak)
add_subdirectory(examples/leap_year)
add_subdirectory(examples/bill_problem)
add_subdirectory(examples/elardo_calc)
add_subdirectory(examples/strscpn)
add_subdirectory(examples/palindrome)
add_subdirectory(examples/hour_glass)
add_subdirectory(examples/rectangle_area)