cmake_minimum_required(VERSION 3.14)
project(learn_c
    DESCRIPTION "learnng the c fundamentals"
)

set(CMAKE_C_STANDARD 99)

add_subdirectory(template/raylib_proj)

add_subdirectory(DSA/binary_search)
add_subdirectory(DSA/circular_left_shifting)
add_subdirectory(DSA/fibonacci)
add_subdirectory(DSA/linked_lists)
add_subdirectory(DSA/bubble_sort)
add_subdirectory(DSA/insertion_sort)
add_subdirectory(DSA/selection_sort)
add_subdirectory(DSA/merge_sort)
add_subdirectory(DSA/binary_tree)

add_subdirectory(games/valid_sudoku)
add_subdirectory(games/donut)
add_subdirectory(games/matrices)
add_subdirectory(games/rat_maze)

add_subdirectory(examples/array_manipulation)
add_subdirectory(examples/diamond)
add_subdirectory(examples/butterfly)
add_subdirectory(examples/bali_triangle)
add_subdirectory(examples/strings)
add_subdirectory(examples/characterism)
add_subdirectory(examples/session_08_21)
add_subdirectory(examples/dynamic_allocation)
add_subdirectory(examples/palpak)
add_subdirectory(examples/leap_year)
add_subdirectory(examples/bill_problem)
add_subdirectory(examples/elardo_calc)
add_subdirectory(examples/strscpn)
add_subdirectory(examples/palindrome)
add_subdirectory(examples/hour_glass)
add_subdirectory(examples/pascals)
add_subdirectory(examples/pointer_access)
add_subdirectory(examples/std_dev)
add_subdirectory(examples/sort_absolute_difference)
add_subdirectory(examples/spiral)
add_subdirectory(examples/structs_enums)
add_subdirectory(examples/prime)
add_subdirectory(examples/remove_duplicates)
add_subdirectory(examples/largest_submatrix)
add_subdirectory(examples/create_file)
add_subdirectory(examples/saddle_point)
